--- a/_sass/minimal-mistakes/skins/_mint.scss
+++ b/_sass/minimal-mistakes/skins/_mint.scss
@@ -8,14 +8,14 @@ $text-color: #40514e !default;
 $muted-text-color: #40514e !default;
 $primary-color: #11999e !default;
 $border-color: mix(#fff, #40514e, 75%) !default;
-$footer-background-color: #fcbeda !default;
+$footer-background-color: #30e3ca !default;
 $link-color: #11999e !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 
 .page__footer {
-  color: fcbeda !important; // override
+  color: #fff !important; // override
 }
 
 .page__footer-follow .social-icons i,
